# zenoh_autoware_fms

./: .gitignore  .gitmodules  README.md  api_server.py  bootstrap.sh  config.json5  dev.sh  download_map.sh  env.sh  fms_teleop_config.yaml  justfile  kinematics_msgs  orchestrator.sh  prepare_env.sh  prerequisite.sh  pyproject.toml  run_server.sh  shutdown_env.sh
.github/workflows/: ci.yaml
autoware_configs/: teleop_config.yaml
backends/: README.md  carla.md  carla.sh
carla_map/: .gitignore  README.md
frontend/: .env  README.md  package-lock.json  package.json
frontend/public/carla_map/: README.md
frontend/src/: App.js
frontend/src/app/: store.js
frontend/src/containers/: Header.js  Layout.js  LeftSidebar.js
frontend/src/features/fms/: GetStarted.js
frontend/src/features/fms/common/: index.js
frontend/src/features/fms/mapview/: index.js  mapConfig.js  mapViewSlice.js  mapViewer.js
frontend/src/features/fms/remotedrive/: cameraImg.js  index.js  remoteDriveSlice.js  steering.js  useDriveInput.js  useIntentLoop.js  useKeyboardControl.js  useRemoteDriveSession.js
frontend/src/features/fms/vehiclelist/: index.js  vehiclelistSlice.js
frontend/src/features/fms/vehiclelist/components/: AddLeadModalBody.js
frontend/src/pages/fms/: MapView.js  RemoteDriving.js  VehicleList.js  Welcome.js
frontend/src/pages/protected/: Dashboard.js  Integration.js
frontend/src/routes/: index.js  sidebar.js
html/: index.html
logs/: .gitignore
www/: index.html  mycontent.js
zenoh_app/: Dockerfile.fms  camera_autoware.py  list_autoware.py  map_parser.py  parse_payload.py  pose_service.py  status_autoware.py  structure.py  teleop_autoware.py
